Operator Search gives the wrong result #77504

Closed
opened 2020-06-06 13:03:32 +02:00 by Yevgeny Makarov · 9 comments

System Information
Operating system: Darwin-19.4.0-x86_64-i386-64bit 64 Bits
Graphics card: AMD Radeon Pro 455 OpenGL Engine ATI Technologies Inc. 4.1 ATI-3.8.24

Blender Version
Broken: version: 2.83.0, branch: master, commit date: 2020-06-03 14:38, hash: 211b6c29f7
Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-06-04 22:58, hash: c7329da14b
Worked: version: 2.82 (sub 7), branch: master, commit date: 2020-03-12 05:06, hash: 375c7dc4ca

Exact steps for others to reproduce the error

  1. Call the Operator Search in 3D View, type "zoom":
 {F8586450, width=540}
  1. Perform "Zoom View".

  2. Call the Operator Search again. There is prefilled "Zoom Vie" search (without the last letter), no "View3D > Zoom View" result, and wrong "2D Zoom" in 3D context:

 {F8586449, width=540}
**System Information** Operating system: Darwin-19.4.0-x86_64-i386-64bit 64 Bits Graphics card: AMD Radeon Pro 455 OpenGL Engine ATI Technologies Inc. 4.1 ATI-3.8.24 **Blender Version** Broken: version: 2.83.0, branch: master, commit date: 2020-06-03 14:38, hash: `211b6c29f7` Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-06-04 22:58, hash: `c7329da14b` Worked: version: 2.82 (sub 7), branch: master, commit date: 2020-03-12 05:06, hash: `375c7dc4ca` **Exact steps for others to reproduce the error** 1. Call the Operator Search in 3D View, type "zoom": ``` {F8586450, width=540} ``` 2. Perform "Zoom View". 3. Call the Operator Search again. There is prefilled "**Zoom Vie**" search (without the last letter), no "**View3D > Zoom View**" result, and wrong "**2D Zoom**" in 3D context: ``` {F8586449, width=540} ```
Author
Member

Added subscriber: @jenkm

Added subscriber: @jenkm

#78137 was marked as duplicate of this issue

#78137 was marked as duplicate of this issue

Added subscriber: @mano-wii

Added subscriber: @mano-wii
Campbell Barton was assigned by Germano Cavalcante 2020-06-08 19:53:49 +02:00

I can reproduce the problem in 2.83, but not in 2.90
It is a regression since it works in 2.82

Probably related to changes in the search menu.

I can reproduce the problem in 2.83, but not in 2.90 It is a regression since it works in 2.82 Probably related to changes in the search menu.

The issue with clipping the last character goes back to 2.79, now fixed 7d2b4ae9c6.

Looking into the other issue of 2D zoom showing.

The issue with clipping the last character goes back to 2.79, now fixed 7d2b4ae9c6. Looking into the other issue of 2D zoom showing.

This issue was referenced by ce11640eef

This issue was referenced by ce11640eef03736c1d840f8293bc890a1012de49

This issue was referenced by ee64b595da

This issue was referenced by ee64b595da5ed5b40b91e181bdbb179131d9ae0d

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'

Added subscribers: @ktp, @rjg

Added subscribers: @ktp, @rjg
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#77504
No description provided.