Fix menu operator/search clipping the last character

Noted in T77504